<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- <string name="map_key">AIzaSyD5EOEkts1TkSD56LAAnvbU6hfBl0M1tYg</string> -->
    <string name="map_key">AIzaSyAnkC5Fr8IHZ7lSJbyRyT0tKPKuzfjzU-E</string>
    <string name="app_name">AppWiz</string>
    <string name="action_settings">Settings</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="home">HOME</string>
    <string name="eshop">E-SHOP</string>
    <string name="loyalty">LOYALTY</string>
    <string name="feedback">FEEDBACK</string>
    <string name="vouchers">VOUCHERS</string>
    <string name="image_shop">Image Shop</string>
    <string name="locate_us">Locate Us</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="how_it_works">How it Works</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="zip">Postal code</string>
    <string name="feedback_hint">Your feedback is valuable to us.</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="select_gender">Select your gender</string>
    <string name="save">Save</string>
    <string name="detail_image">Detail Image</string>
    <string name="product_details">Product Details</string>
    <string name="product_name">Product Name: </string>
    <string name="quantity">Quantity: </string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="buy">Add to Cart</string>
    <string name="placeholder_price">$20</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="close">Close</string>
    <string name="one">1</string>
    <string name="submit">Submit</string>
    <string name="reservation">Reservation</string>
    <string name="gift">Gift</string>
    <string name="refer_a_friend">Refer a Friend &amp; Win a Gift</string>
    <string name="friend_name">Friend\'s Name</string>
    <string name="friend_email">Friend\'s Email</string>
    <string name="friend_mobile">Friend\'s Mobile Number</string>
    <string name="refer">Refer</string>
    <string name="profile_update_txt">Please fill in your Personal Details on the Profile Page.</string>
    <string name="profile_update">Profile Update</string>
    <string name="thank_you">Thank You!</string>
    <string name="note">Note: You are only required to input your Credit Card Detail if you are making a purchase.</string>
    <string name="profile">Profile</string>
    <string name="terms_and_condition">Terms and Conditions</string>
    <string name="merchant_admin">Merchant Admin</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="save_and_close">Save &amp; Close</string>
    <string name="dismiss">Dismiss</string>
    <string name="reset">Reset</string>
    <string name="qty">Qty</string>
    <string name="search">Search</string>

    <string-array name="gender_values">
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>