<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <include
        android:id="@+id/header"
        layout="@layout/header" />

    <include
        android:id="@+id/footer"
        layout="@layout/footer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edt_feedback"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/background_round_corner"
            android:ems="10"
            android:gravity="top|left"
            android:hint="@string/feedback_hint"
            android:inputType="textMultiLine|textCapSentences"
            android:lines="3"
            android:padding="8dp"
            android:textColorHint="@android:color/darker_gray" />

        <RadioGroup
            android:id="@+id/rg_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="24dp" >

            <RadioButton
                android:id="@+id/rd_like"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:checked="true"
                android:paddingRight="2dp"
                android:text="@string/like"
                android:textSize="@dimen/textsize" />

            <RadioButton
                android:id="@+id/rd_dislike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="2dp"
                android:text="@string/dislike"
                android:textSize="@dimen/textsize" />

            <RadioButton
                android:id="@+id/rd_reservation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reservation"
                android:textSize="@dimen/textsize" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center"
            android:background="@drawable/shadowround" >

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="submitPressed"
                android:text="@string/submit"
                android:textSize="@dimen/textsize" />
        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollWrap"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:layout_weight="0.36" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingRight="24dp" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp" >

                    <ImageView
                        android:id="@+id/iv_loyalty_logo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/textViewReferAFriend"
                        android:contentDescription="@string/gift"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/textViewReferAFriend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="6dp"
                        android:text="@string/refer_a_friend"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textsize"
                        android:textStyle="bold" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/edt_friend_name"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/background_round_corner"
                    android:ems="10"
                    android:hint="@string/friend_name"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords|textPersonName"
                    android:paddingLeft="8dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/edt_friend_email"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/background_round_corner"
                    android:ems="10"
                    android:hint="@string/friend_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="8dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/edt_friend_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/background_round_corner"
                    android:ems="10"
                    android:hint="@string/friend_mobile"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:paddingLeft="8dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/darker_gray" />
            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/shadowround" >

            <Button
                android:id="@+id/btn_refer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="referPressed"
                android:text="@string/refer"
                android:textSize="@dimen/textsize" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>