<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <include
        android:id="@+id/header"
        layout="@layout/header" />

    <include
        android:id="@+id/footer"
        layout="@layout/footer" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/pass_auth"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edt_height"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_round_corner"
                android:ems="10"
                android:hint="@string/first_name"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:paddingLeft="8dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/edt_lname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edt_height"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_round_corner"
                android:ems="10"
                android:hint="@string/last_name"
                android:imeOptions="actionDone"
                android:inputType="textCapWords"
                android:paddingLeft="8dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" >

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_height"
                    android:layout_toLeftOf="@+id/sp_gender"
                    android:background="@drawable/background_round_corner"
                    android:drawableRight="@drawable/ic_cal"
                    android:gravity="center_vertical"
                    android:hint="@string/date_of_birth"
                    android:paddingLeft="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/darker_gray" />

                <Spinner
                    android:id="@+id/sp_gender"
                    android:layout_width="100dp"
                    android:layout_height="@dimen/edt_height"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/background_round_corner"
                    android:entries="@array/gender_values"
                    android:prompt="@string/select_gender"
                    android:textColor="@color/black" />
            </RelativeLayout>

            <EditText
                android:id="@+id/edt_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edt_height"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_round_corner"
                android:ems="10"
                android:hint="@string/mobile_number"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:paddingLeft="8dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edt_height"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_round_corner"
                android:ems="10"
                android:hint="@string/email_address"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingLeft="8dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/edt_address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edt_height"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_round_corner"
                android:ems="10"
                android:hint="@string/address"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:paddingLeft="8dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/edt_city"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edt_height"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_round_corner"
                android:ems="10"
                android:hint="@string/city"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:paddingLeft="8dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/edt_state"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edt_height"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_round_corner"
                android:ems="10"
                android:hint="@string/state"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingLeft="8dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:visibility="gone" />

            <Button
                android:id="@+id/sp_country"
                style="?android:attr/spinnerStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edt_height"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_round_corner"
                android:ems="10"
                android:hint="@string/country"
                android:onClick="countryPressed"
                android:paddingLeft="8dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/edt_zip"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edt_height"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_round_corner"
                android:ems="10"
                android:hint="@string/zip"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:paddingLeft="8dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp" >

                <View
                    android:id="@+id/lineTop"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_alignParentTop="true"
                    android:background="@android:color/darker_gray" />

                <View
                    android:id="@+id/lineBot"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_alignParentBottom="true"
                    android:background="@android:color/darker_gray" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shadowround" >

                    <Button
                        android:id="@+id/btn_save"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:onClick="savePressed"
                        android:text="@string/save"
                        android:textSize="@dimen/textsize" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>