<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white" >

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:gravity="center"
        android:text="@string/password"
        android:textSize="@dimen/textsize"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edt_height"
        android:layout_below="@+id/textViewTitle"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/background_round_corner"
        android:ems="10"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingLeft="8dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/linOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_password"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:background="@drawable/shadowround" >

            <Button
                android:id="@+id/btn_enter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/enter"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:background="@drawable/shadowround" >

            <Button
                android:id="@+id/btn_saveclose"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/save_and_close"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>