<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:layout_marginLeft="12dp"
    android:layout_marginRight="12dp"
    android:layout_marginTop="12dp"
    android:background="@drawable/shadow" >

    <ImageView
        android:id="@+id/iv_eshop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/voucher_height"
        android:contentDescription="@string/image_shop"
        android:scaleType="fitXY"
        android:src="@drawable/image_placeholder" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:background="@drawable/background_gradient"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_eshop_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:lines="1"
            android:text="@string/lorem_ipsum"
            android:textSize="@dimen/textsize"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/tv_eshop_short_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:lines="1"
            android:text="@string/lorem_ipsum"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textsize"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/relStrike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tv_eshop_old_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_price"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ivStrike"
                    android:layout_width="wrap_content"
                    android:layout_height="6dp"
                    android:layout_centerInParent="true"
                    android:background="@android:color/white" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_eshop_new_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/placeholder_price"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>